--- a/templates/platforms/jboss/datasource.html
+++ b/templates/platforms/jboss/datasource.html
@@ -1,5 +1,5 @@
 {% load i18n %} 
-<img class="introicon" src="{{static_url}}images/icons/app-settings.png"/>
+<img class="introicon" src="{{static_url}}images/icons/datasource.png"/>
 <div class="info">
 	<strong>{% trans 'Jndi Name' %}</strong>: {{datasource.jndi_name}} <br/>
 	<strong>{% trans 'Connection URL' %}</strong>: {{datasource.connection_url}} <br/>
