--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -22,6 +22,8 @@
 		<!-- JQuery Context Menu -->
 		<link href="{{STATIC_URL}}css/jeegoocontext/style.css" rel="stylesheet" type="text/css" />
 		<link href="{{STATIC_URL}}css/jeegoocontext/skins/cm_default/style.css" rel="Stylesheet" type="text/css" />
+		<!-- jQuery qTip-->
+		<link href="{{STATIC_URL}}css/jquery-qtip/jquery.qtip.css" rel="stylesheet" type="text/css" />
 		
 		<!-- DataTable -->
 		<link href="{{STATIC_URL}}css/datatable/demo_page.css" rel="stylesheet" type="text/css" />
@@ -44,6 +46,8 @@
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-cookie/jquery.cookie.js"></script>
 		<!-- JQuery Context Menu-->
 		<script type="text/javascript" src="{{STATIC_URL}}js/jeegoocontext/jquery.jeegoocontext.js"></script>
+		<!-- JQuery qTip-->
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-qtip/jquery.qtip.min.js"></script>
 		<!-- Collapsible Panel-->
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-collapsible-panel/diQuery-collapsiblePanel.js"></script>
 		<!-- DataTable -->
