Fixed problem in inventory for WebLogic/OC4J Fixed problem in get_log method

--- a/templates/platforms/jboss/logform.html
+++ b/templates/platforms/jboss/logform.html
@@ -128,7 +128,7 @@
 				$('#loading').hide();
 			},
 			success : function(data) {
-				if(data) {
+				if(data && data.logfilecontent) {
 					$("#logcontainer").append("<h1>" + server + "</h1>");	
 					$("#logcontainer").append(data.logfilecontent);	
 				} else {
