--- a/templates/server/details.html
+++ b/templates/server/details.html
@@ -43,10 +43,12 @@
 {% if server_operations %}	
 <div class="fg-toolbar">
 	{%for group_name, operations in server_operations.items %}
-		{{group_name}}
-		{% for current_op in operations %}
-			<img class="opbutton" onclick="checkExecution('{{settings.BASE_URL}}', '{{current_op.hasparameters}}', '{{current_op.agent}}', '{{current_op.action}}', '{{current_op.filter}}');" src="{{static_url}}/images/toolbar/{{current_op.img}}" title="{{current_op.name}}">
-		{% endfor %}
+		<div class="toolbar-group">
+			<div class="toolbar-group-title">{{group_name}}</div>
+			{% for current_op in operations %}
+				<img class="opbutton" onclick="checkExecution('{{settings.BASE_URL}}', '{{current_op.hasparameters}}', '{{current_op.agent}}', '{{current_op.action}}', '{{current_op.filter}}');" src="{{static_url}}/images/toolbar/{{current_op.img}}" title="{{current_op.name}}">
+			{% endfor %}
+		</div>
 	{%endfor%}
 </div>
 <div id="toolbar-response"></div>
