Fixed style problem on firefox

--- a/templates/platforms/oracledb/database.html
+++ b/templates/platforms/oracledb/database.html
@@ -37,23 +37,25 @@ table.oracledb tr.odd {
 	<strong>{% trans 'Instance Home' %}</strong>: {{instance.instance_home}} <br/>
 	<strong>{% trans 'Run at startup' %}</strong>: {{instance.run_at_startup}} <br/>
 	<br/>
-	<strong>{% trans 'Information' %}</strong>
-	<table id="oracledb" class="oracledb">
-		<thead>
-			<tr>
-				<th>{% trans 'Username' %}</th>
-				<th>{% trans 'Object Type' %}</th>
-				<th>{% trans 'Number' %}</th>
-			</tr>
-		</thead>
-		<tbody>
-			{% for info in instance.data%}
-			<tr>
-				<td>{{info.user_name}}</td>
-				<td>{{info.obj_type}}</td>
-				<td>{{info.number}}</td>
-			</tr>
-			{% endfor %}
-		</tbody>
-	</table>
+</div>
+<strong>{% trans 'Information' %}</strong>
+<div id="tablecontainer">
+<table id="oracledb" class="oracledb">
+	<thead>
+		<tr>
+			<th>{% trans 'Username' %}</th>
+			<th>{% trans 'Object Type' %}</th>
+			<th>{% trans 'Number' %}</th>
+		</tr>
+	</thead>
+	<tbody>
+		{% for info in instance.data%}
+		<tr>
+			<td>{{info.user_name}}</td>
+			<td>{{info.obj_type}}</td>
+			<td>{{info.number}}</td>
+		</tr>
+		{% endfor %}
+	</tbody>
+</table>
 </div>
