--- a/templates/theme/kermit/base.html
+++ b/templates/theme/kermit/base.html
@@ -25,6 +25,9 @@
 		<!-- jQuery qTip-->
 		<link href="{{STATIC_URL}}css/jquery-qtip/jquery.qtip.css" rel="stylesheet" type="text/css" />
 		
+		<!-- jQuery-FlexBox-->
+		<link href="{{STATIC_URL}}css/jquery-flexbox/jquery.flexbox.css" rel="stylesheet" type="text/css" />
+		
 		<!-- DataTable -->
 		<link href="{{STATIC_URL}}css/datatable/demo_page.css" rel="stylesheet" type="text/css" />
 		<link href="{{STATIC_URL}}css/datatable/demo_table.css" rel="stylesheet" type="text/css" />
@@ -48,6 +51,8 @@
 		<script type="text/javascript" src="{{STATIC_URL}}js/jeegoocontext/jquery.jeegoocontext.js"></script>
 		<!-- JQuery qTip-->
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-qtip/jquery.qtip.min.js"></script>
+		<!-- JQuery FlexBox-->
+		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-flexbox/jquery.flexbox.min.js"></script>
 		<!-- Collapsible Panel-->
 		<script type="text/javascript" src="{{STATIC_URL}}js/jquery-collapsible-panel/diQuery-collapsiblePanel.js"></script>
 		<!-- DataTable -->
