--- a/templates/platforms/oc4j/logform.html
+++ b/templates/platforms/oc4j/logform.html
@@ -75,21 +75,28 @@
 //				$('#bt').attr("disabled", "");
 			} else {
 				$("#logcontainer").empty();
-				for (server_resp in data.result) {
-					getLogContent(data.result[server_resp].server, data.result[server_resp].logfile);
+				if (data.result!="KO") {
+					for (server_resp in data.result) {
+						if (data.result[server_resp].message!=undefined) {
+							$("#emsg").html("<div class='errorbox'>" + data.result[server_resp].message + "</div><br/>").fadeIn("slow");
+						} else {
+							getLogContent(data.result[server_resp].server, data.result[server_resp].logfile);
+							$("#logcontainer").dialog({
+								modal : true,
+								title : 'Server Log',
+								height : 400,
+								width : 800,
+								open: function(event, ui){
+									$('body').css('overflow','auto');
+									$('.ui-widget-overlay').css('width','100%'); 
+								} 
+							});	
+							$("#" + data.dialog_name).dialog('close');
+						}
+					}		
+				} else {
+					$("#emsg").append("<div class='errorbox'>" + data.message + "</div><br/>").fadeIn("slow");
 				}
-				
-				$("#logcontainer").dialog({
-					modal : true,
-					title : 'Server Log',
-					height : 400,
-					width : 800,
-					open: function(event, ui){
-						$('body').css('overflow','auto');
-						$('.ui-widget-overlay').css('width','100%'); 
-					} 
-				});			
-				$("#" + data.dialog_name).dialog('close');
 			}
 		} else {
 			//DON'T PANIC :D
@@ -143,6 +150,7 @@
 		//Disable the submit button - can't click twice
 		$('.errorlist').remove();
 		//Get rid of any old error uls
+		$('#emsg').empty();
 		$('#emsg').fadeOut('slow');
 		$('#loading').show();
 		//Get rid of the main error message
@@ -153,9 +161,7 @@
 <p>
 	Parameters required to execute {{action}}
 </p>
-<div id="emsg">
-	&nbsp;
-</div>
+<div id="emsg"></div>
 <form action="{% url oc4j_get_log filters 'deploy-dialog' None%}" method="post" id="tf">
 	{% csrf_token %}
 		{{ form.as_p }}
