--- a/templates/platforms/oracledb/clonedbform.html
+++ b/templates/platforms/oracledb/clonedbform.html
@@ -179,8 +179,17 @@
 				// re-enable the submit button, coz user has to fix stuff.
 //				$('#bt').attr("disabled", "");
 			} else {
-				alert(data.result);				
-				$("#" + data.dialog_name).dialog('close');
+				if (data.result!="KO") {
+					for (server_resp in data.result) {
+						if (data.result[server_resp].message!=undefined) {
+							$("#emsg").append("<div class='errorbox'>" + data.result[server_resp].message + "</div><br/>").fadeIn("slow");
+						} else {
+							$("#emsg").append("<div class='messagebox'>" + data.result[server_resp].response + "</div><br/>").fadeIn("slow");			
+						}
+					}
+				} else {
+					$("#emsg").append("<div class='errorbox'>" + data.message + "</div><br/>").fadeIn("slow");	
+				}
 			}
 		} else {
 			//DON'T PANIC :D
@@ -204,6 +213,7 @@
 		//Disable the submit button - can't click twice
 		$('.errorlist').remove();
 		//Get rid of any old error uls
+		$('#emsg').empty();
 		$('#emsg').fadeOut('slow');
 		$('#loading').show();
 		//Get rid of the main error message
