--- a/templates/platforms/postgresql/executeform.html
+++ b/templates/platforms/postgresql/executeform.html
@@ -83,24 +83,28 @@
 					$('#emsg').text(data.errors);
 				} else {
 					$("#logcontainer").empty();
-					for (server_resp in data.result) {
-						if (data.result[server_resp].logfile) {
-							getLogContent(data.result[server_resp].server, data.result[server_resp].logfile);
-						} else {
-							$("#logcontainer").append("<h1><b>" + data.result[server_resp].server + "</b></h1><br/>" + data.result[server_resp].statusmsg);	
+					if (data.result!="KO") {
+						for (server_resp in data.result) {
+							if (data.result[server_resp].message!=undefined) {
+								$("#emsg").html("<div class='errorbox'>" + data.result[server_resp].message + "</div><br/>").fadeIn("slow");
+							} else {	
+								getLogContent(data.result[server_resp].server, data.result[server_resp].logfile);
+								$("#logcontainer").dialog({
+									modal : true,
+									title : 'Query Log',
+									height : 400,
+									width : 800,
+									open: function(event, ui){
+										$('body').css('overflow','auto');
+										$('.ui-widget-overlay').css('width','100%'); 
+									} 
+								});
+								$("#" + data.dialog_name).dialog('close');
+							}
 						}
+					} else {
+						$("#emsg").append("<div class='errorbox'>" + data.message + "</div><br/>").fadeIn("slow");
 					}
-					$("#logcontainer").dialog({
-						modal : true,
-						title : 'Query Log',
-						height : 400,
-						width : 800,
-						open: function(event, ui){
-							$('body').css('overflow','auto');
-							$('.ui-widget-overlay').css('width','100%'); 
-						} 
-					});
-					$("#" + data.dialog_name).dialog('close');
 				}
 			}
 		} else {
