--- a/templates/platforms/weblogic/logform.html
+++ b/templates/platforms/weblogic/logform.html
@@ -75,21 +75,28 @@
 //				$('#bt').attr("disabled", "");
 			} else {
 				$("#logcontainer").empty();
-				for (server_resp in data.result) {
-					getLogContent(data.result[server_resp].server, data.result[server_resp].logfile);
+				if (data.result!="KO") {
+					for (server_resp in data.result) {
+						if (data.result[server_resp].message!=undefined) {
+							$("#emsg").html("<div class='errorbox'>" + data.result[server_resp].message + "</div><br/>").fadeIn("slow");
+						} else {
+							getLogContent(data.result[server_resp].server, data.result[server_resp].logfile);
+							$("#logcontainer").dialog({
+								modal : true,
+								title : 'Server Log',
+								height : 400,
+								width : 800,
+								open: function(event, ui){
+									$('body').css('overflow','auto');
+									$('.ui-widget-overlay').css('width','100%'); 
+								} 
+							});	
+							$("#" + data.dialog_name).dialog('close');
+						}
+					}		
+				} else {
+					$("#emsg").append("<div class='errorbox'>" + data.message + "</div><br/>").fadeIn("slow");
 				}
-				
-				$("#logcontainer").dialog({
-					modal : true,
-					title : 'Server Log',
-					height : 400,
-					width : 800,
-					open: function(event, ui){
-						$('body').css('overflow','auto');
-						$('.ui-widget-overlay').css('width','100%'); 
-					} 
-				});			
-				$("#" + data.dialog_name).dialog('close');
 			}
 		} else {
 			//DON'T PANIC :D
