Fixed problem in bar list Moved agents operations with parameters to async Changed error message for OC4J

--- a/templates/widgets/agent/modalform.html
+++ b/templates/widgets/agent/modalform.html
@@ -20,7 +20,6 @@
 	});
 	
 	function parseResponse(data) {
-		$('#loading').hide();
 		if(data) {
 			// Build a var. NOTE: Make sure your id name (this is a div) is NOT THE SAME
 			// as any var in javascript -- ie has a fit and barfs errors.
@@ -42,22 +41,51 @@
 //				$('#bt').attr("disabled", "");
 			} else {
 				$("#" + data.response_container).empty();
-				if (data.type == 'json') {
-					for (i in data.response) {
-						resp = data.response[i];
-						content = '<strong>' + resp.sender + '</strong>';
-						content += '<ul>';
-						content += '<li> Status Code: ' + resp.statuscode + '</li>';
-						content += '<li> Status Message: ' + resp.statusmsg + '</li>';
-						content += '<li> Data: ' + JSON.stringify(resp.data) + '</li>';
-						content += '</ul>';
-						$(content).appendTo("#" + data.response_container);	
-					}
-				} else if (data.type == 'html') {
-					$("#" + data.response_container).html(data.response);	
-				}
-				
 				$("#" + data.dialog_name).dialog('close');
+				$('#modalprogress').dialog({
+						modal : true,
+						title : 'Progress...',
+						height : 100,
+						width : 500
+				});
+				$( "#progressbar" ).progressbar({ value: 0 });
+				$( "#taskstate").html('<b>Waiting...	</b>');
+				$.get(data.update_url, function(response) {
+					var checkStatus = function() {
+						$.getJSON(data.update_url, function(result) {
+				    		$( "#progressbar").progressbar({ value: result.value });
+							$( "#taskstate").html('<b>' + result.state + '</b>');	
+					        if(result.state!='SUCCESS' && result.state!='FAILURE' && result.state!=undefined) {
+					            setTimeout(checkStatus, 2000);
+					        } else {
+					        	$("#" + data.response_container).empty();
+								if (result.type == 'json') {
+									for (i in result.response) {
+										resp = result.response[i];
+										content = '<strong>' + resp.sender + '</strong>';
+										content += '<ul>';
+										content += '<li> Status Code: ' + resp.statuscode + '</li>';
+										content += '<li> Status Message: ' + resp.statusmsg + '</li>';
+										content += '<li> Data: ' + JSON.stringify(resp.data) + '</li>';
+										content += '</ul>';
+										$(content).appendTo("#" + data.response_container);	
+									}
+								} else if (result.type == 'html') {
+									$("#" + data.response_container).html(result.response);	
+								}
+					        	$('#modalprogress').dialog('close');
+					        }
+				        // do something else
+		    		 	});
+					}
+					if (data.UUID) {
+						checkStatus();
+					} else {
+						if (data.error) {
+							$( "#taskstate").html(data.error);
+						}
+					}
+				});
 			}
 		} else {
 			//DON'T PANIC :D
@@ -70,8 +98,9 @@
 		//Disable the submit button - can't click twice
 		$('.errorlist').remove();
 		//Get rid of any old error uls
+		$('#emsg').empty();
 		$('#emsg').fadeOut('slow');
-		$('#loading').show();
+		//$('#loading').show();
 		//Get rid of the main error message
 		return true;
 		//Might not need this...
