--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -85,9 +85,9 @@
 				checkStatus();
 			} else {
 				if (data.error) {
-					alert(data.error);
+					$( "#taskstate").html(data.error);
 				}
-				$('#modalprogress').dialog('close');	
+				//$('#modalprogress').dialog('close');	
 			}
 		});
 	}
